k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-ws-gateway-proxy
spec:
  type: ClusterIP
  selector:
    app: go-ws-gateway-proxy
  ports:
    - name: http
      port: 80
      targetPort: http
